packages/gavel-owl/gavel-owl-0.2.0.dev0.tar.gz/gavel-owl-0.2.0.dev0/src/gavel_owl/dialects/fowl/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> starter
Rule 1     starter -> COMMENT ontology
Rule 2     starter -> ontology
Rule 3     ontology -> LPAREN START URI statement RPAREN
Rule 4     ontology -> statement
Rule 5     ontology -> LPAREN START error
Rule 6     ontology -> LPAREN START URI error
Rule 7     statement -> axiom statement
Rule 8     statement -> import statement
Rule 9     statement -> comment statement
Rule 10    statement -> module statement
Rule 11    statement -> axiom
Rule 12    statement -> import
Rule 13    statement -> comment
Rule 14    statement -> module
Rule 15    comment -> LPAREN CLCOMMENT QUOTED_STRING RPAREN
Rule 16    comment -> LPAREN CLCOMMENT error RPAREN
Rule 17    module -> LPAREN CLMODULE NONLOGICAL LPAREN IMPORT URI RPAREN RPAREN
Rule 18    module -> LPAREN CLMODULE error
Rule 19    module -> LPAREN CLMODULE LPAREN IMPORT URI RPAREN RPAREN
Rule 20    import -> LPAREN IMPORT URI RPAREN
Rule 21    import -> LPAREN IMPORT error
Rule 22    axiom -> negation
Rule 23    axiom -> universal
Rule 24    axiom -> existential
Rule 25    axiom -> conjunction
Rule 26    axiom -> disjunction
Rule 27    axiom -> implication
Rule 28    axiom -> biconditional
Rule 29    axiom -> predicate
Rule 30    negation -> LPAREN NOT axiom RPAREN
Rule 31    conjunction -> LPAREN AND axiom_list RPAREN
Rule 32    conjunction -> LPAREN AND error
Rule 33    disjunction -> LPAREN OR axiom_list RPAREN
Rule 34    disjunction -> LPAREN OR error
Rule 35    axiom_list -> axiom axiom_list
Rule 36    axiom_list -> axiom
Rule 37    implication -> LPAREN IF axiom axiom RPAREN
Rule 38    implication -> LPAREN IF error
Rule 39    implication -> LPAREN IF axiom error
Rule 40    biconditional -> LPAREN IFF axiom axiom RPAREN
Rule 41    biconditional -> LPAREN IFF error
Rule 42    biconditional -> LPAREN IFF axiom error
Rule 43    existential -> LPAREN EXISTS LPAREN nonlogicals RPAREN axiom RPAREN
Rule 44    existential -> LPAREN EXISTS LPAREN error
Rule 45    existential -> LPAREN EXISTS LPAREN nonlogicals RPAREN error
Rule 46    universal -> LPAREN FORALL LPAREN nonlogicals RPAREN axiom RPAREN
Rule 47    universal -> LPAREN FORALL LPAREN nonlogicals RPAREN error axiom RPAREN
Rule 48    universal -> LPAREN FORALL LPAREN nonlogicals RPAREN error RPAREN
Rule 49    universal -> LPAREN FORALL LPAREN nonlogicals RPAREN axiom error RPAREN
Rule 50    universal -> LPAREN FORALL error LPAREN nonlogicals RPAREN error axiom RPAREN
Rule 51    predicate -> LPAREN NONLOGICAL parameter RPAREN
Rule 52    predicate -> LPAREN NONLOGICAL error RPAREN
Rule 53    parameter -> function parameter
Rule 54    parameter -> nonlogicals parameter
Rule 55    parameter -> function
Rule 56    parameter -> nonlogicals
Rule 57    function -> LPAREN NONLOGICAL parameter RPAREN
Rule 58    function -> LPAREN NONLOGICAL error RPAREN
Rule 59    nonlogicals -> NONLOGICAL nonlogicals
Rule 60    nonlogicals -> NONLOGICAL

Terminals, with rules where they appear

AND                  : 31 32
CLCOMMENT            : 15 16
CLMODULE             : 17 18 19
COMMENT              : 1
EXISTS               : 43 44 45
FORALL               : 46 47 48 49 50
IF                   : 37 38 39
IFF                  : 40 41 42
IMPORT               : 17 19 20 21
LPAREN               : 3 5 6 15 16 17 17 18 19 19 20 21 30 31 32 33 34 37 38 39 40 41 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 52 57 58
NONLOGICAL           : 17 51 52 57 58 59 60
NOT                  : 30
OR                   : 33 34
QUOTED_STRING        : 15
RPAREN               : 3 15 16 17 17 19 19 20 30 31 33 37 40 43 43 45 46 46 47 47 48 48 49 49 50 50 51 52 57 58
START                : 3 5 6
URI                  : 3 6 17 19 20
error                : 5 6 16 18 21 32 34 38 39 41 42 44 45 47 48 49 50 50 52 58

Nonterminals, with rules where they appear

axiom                : 7 11 30 35 36 37 37 39 40 40 42 43 46 47 49 50
axiom_list           : 31 33 35
biconditional        : 28
comment              : 9 13
conjunction          : 25
disjunction          : 26
existential          : 24
function             : 53 55
implication          : 27
import               : 8 12
module               : 10 14
negation             : 22
nonlogicals          : 43 45 46 47 48 49 50 54 56 59
ontology             : 1 2
parameter            : 51 53 54 57
predicate            : 29
starter              : 0
statement            : 3 4 7 8 9 10
universal            : 23

Parsing method: LALR

state 0

    (0) S' -> . starter
    (1) starter -> . COMMENT ontology
    (2) starter -> . ontology
    (3) ontology -> . LPAREN START URI statement RPAREN
    (4) ontology -> . statement
    (5) ontology -> . LPAREN START error
    (6) ontology -> . LPAREN START URI error
    (7) statement -> . axiom statement
    (8) statement -> . import statement
    (9) statement -> . comment statement
    (10) statement -> . module statement
    (11) statement -> . axiom
    (12) statement -> . import
    (13) statement -> . comment
    (14) statement -> . module
    (22) axiom -> . negation
    (23) axiom -> . universal
    (24) axiom -> . existential
    (25) axiom -> . conjunction
    (26) axiom -> . disjunction
    (27) axiom -> . implication
    (28) axiom -> . biconditional
    (29) axiom -> . predicate
    (20) import -> . LPAREN IMPORT URI RPAREN
    (21) import -> . LPAREN IMPORT error
    (15) comment -> . LPAREN CLCOMMENT QUOTED_STRING RPAREN
    (16) comment -> . LPAREN CLCOMMENT error RPAREN
    (17) module -> . LPAREN CLMODULE NONLOGICAL LPAREN IMPORT URI RPAREN RPAREN
    (18) module -> . LPAREN CLMODULE error
    (19) module -> . LPAREN CLMODULE LPAREN IMPORT URI RPAREN RPAREN
    (30) negation -> . LPAREN NOT axiom RPAREN
    (46) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN axiom RPAREN
    (47) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN error axiom RPAREN
    (48) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN error RPAREN
    (49) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN axiom error RPAREN
    (50) universal -> . LPAREN FORALL error LPAREN nonlogicals RPAREN error axiom RPAREN
    (43) existential -> . LPAREN EXISTS LPAREN nonlogicals RPAREN axiom RPAREN
    (44) existential -> . LPAREN EXISTS LPAREN error
    (45) existential -> . LPAREN EXISTS LPAREN nonlogicals RPAREN error
    (31) conjunction -> . LPAREN AND axiom_list RPAREN
    (32) conjunction -> . LPAREN AND error
    (33) disjunction -> . LPAREN OR axiom_list RPAREN
    (34) disjunction -> . LPAREN OR error
    (37) implication -> . LPAREN IF axiom axiom RPAREN
    (38) implication -> . LPAREN IF error
    (39) implication -> . LPAREN IF axiom error
    (40) biconditional -> . LPAREN IFF axiom axiom RPAREN
    (41) biconditional -> . LPAREN IFF error
    (42) biconditional -> . LPAREN IFF axiom error
    (51) predicate -> . LPAREN NONLOGICAL parameter RPAREN
    (52) predicate -> . LPAREN NONLOGICAL error RPAREN

    COMMENT         shift and go to state 2
    LPAREN          shift and go to state 4

    starter                        shift and go to state 1
    ontology                       shift and go to state 3
    statement                      shift and go to state 5
    axiom                          shift and go to state 6
    import                         shift and go to state 7
    comment                        shift and go to state 8
    module                         shift and go to state 9
    negation                       shift and go to state 10
    universal                      shift and go to state 11
    existential                    shift and go to state 12
    conjunction                    shift and go to state 13
    disjunction                    shift and go to state 14
    implication                    shift and go to state 15
    biconditional                  shift and go to state 16
    predicate                      shift and go to state 17

state 1

    (0) S' -> starter .



state 2

    (1) starter -> COMMENT . ontology
    (3) ontology -> . LPAREN START URI statement RPAREN
    (4) ontology -> . statement
    (5) ontology -> . LPAREN START error
    (6) ontology -> . LPAREN START URI error
    (7) statement -> . axiom statement
    (8) statement -> . import statement
    (9) statement -> . comment statement
    (10) statement -> . module statement
    (11) statement -> . axiom
    (12) statement -> . import
    (13) statement -> . comment
    (14) statement -> . module
    (22) axiom -> . negation
    (23) axiom -> . universal
    (24) axiom -> . existential
    (25) axiom -> . conjunction
    (26) axiom -> . disjunction
    (27) axiom -> . implication
    (28) axiom -> . biconditional
    (29) axiom -> . predicate
    (20) import -> . LPAREN IMPORT URI RPAREN
    (21) import -> . LPAREN IMPORT error
    (15) comment -> . LPAREN CLCOMMENT QUOTED_STRING RPAREN
    (16) comment -> . LPAREN CLCOMMENT error RPAREN
    (17) module -> . LPAREN CLMODULE NONLOGICAL LPAREN IMPORT URI RPAREN RPAREN
    (18) module -> . LPAREN CLMODULE error
    (19) module -> . LPAREN CLMODULE LPAREN IMPORT URI RPAREN RPAREN
    (30) negation -> . LPAREN NOT axiom RPAREN
    (46) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN axiom RPAREN
    (47) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN error axiom RPAREN
    (48) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN error RPAREN
    (49) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN axiom error RPAREN
    (50) universal -> . LPAREN FORALL error LPAREN nonlogicals RPAREN error axiom RPAREN
    (43) existential -> . LPAREN EXISTS LPAREN nonlogicals RPAREN axiom RPAREN
    (44) existential -> . LPAREN EXISTS LPAREN error
    (45) existential -> . LPAREN EXISTS LPAREN nonlogicals RPAREN error
    (31) conjunction -> . LPAREN AND axiom_list RPAREN
    (32) conjunction -> . LPAREN AND error
    (33) disjunction -> . LPAREN OR axiom_list RPAREN
    (34) disjunction -> . LPAREN OR error
    (37) implication -> . LPAREN IF axiom axiom RPAREN
    (38) implication -> . LPAREN IF error
    (39) implication -> . LPAREN IF axiom error
    (40) biconditional -> . LPAREN IFF axiom axiom RPAREN
    (41) biconditional -> . LPAREN IFF error
    (42) biconditional -> . LPAREN IFF axiom error
    (51) predicate -> . LPAREN NONLOGICAL parameter RPAREN
    (52) predicate -> . LPAREN NONLOGICAL error RPAREN

    LPAREN          shift and go to state 4

    ontology                       shift and go to state 18
    statement                      shift and go to state 5
    axiom                          shift and go to state 6
    import                         shift and go to state 7
    comment                        shift and go to state 8
    module                         shift and go to state 9
    negation                       shift and go to state 10
    universal                      shift and go to state 11
    existential                    shift and go to state 12
    conjunction                    shift and go to state 13
    disjunction                    shift and go to state 14
    implication                    shift and go to state 15
    biconditional                  shift and go to state 16
    predicate                      shift and go to state 17

state 3

    (2) starter -> ontology .

    $end            reduce using rule 2 (starter -> ontology .)


state 4

    (3) ontology -> LPAREN . START URI statement RPAREN
    (5) ontology -> LPAREN . START error
    (6) ontology -> LPAREN . START URI error
    (20) import -> LPAREN . IMPORT URI RPAREN
    (21) import -> LPAREN . IMPORT error
    (15) comment -> LPAREN . CLCOMMENT QUOTED_STRING RPAREN
    (16) comment -> LPAREN . CLCOMMENT error RPAREN
    (17) module -> LPAREN . CLMODULE NONLOGICAL LPAREN IMPORT URI RPAREN RPAREN
    (18) module -> LPAREN . CLMODULE error
    (19) module -> LPAREN . CLMODULE LPAREN IMPORT URI RPAREN RPAREN
    (30) negation -> LPAREN . NOT axiom RPAREN
    (46) universal -> LPAREN . FORALL LPAREN nonlogicals RPAREN axiom RPAREN
    (47) universal -> LPAREN . FORALL LPAREN nonlogicals RPAREN error axiom RPAREN
    (48) universal -> LPAREN . FORALL LPAREN nonlogicals RPAREN error RPAREN
    (49) universal -> LPAREN . FORALL LPAREN nonlogicals RPAREN axiom error RPAREN
    (50) universal -> LPAREN . FORALL error LPAREN nonlogicals RPAREN error axiom RPAREN
    (43) existential -> LPAREN . EXISTS LPAREN nonlogicals RPAREN axiom RPAREN
    (44) existential -> LPAREN . EXISTS LPAREN error
    (45) existential -> LPAREN . EXISTS LPAREN nonlogicals RPAREN error
    (31) conjunction -> LPAREN . AND axiom_list RPAREN
    (32) conjunction -> LPAREN . AND error
    (33) disjunction -> LPAREN . OR axiom_list RPAREN
    (34) disjunction -> LPAREN . OR error
    (37) implication -> LPAREN . IF axiom axiom RPAREN
    (38) implication -> LPAREN . IF error
    (39) implication -> LPAREN . IF axiom error
    (40) biconditional -> LPAREN . IFF axiom axiom RPAREN
    (41) biconditional -> LPAREN . IFF error
    (42) biconditional -> LPAREN . IFF axiom error
    (51) predicate -> LPAREN . NONLOGICAL parameter RPAREN
    (52) predicate -> LPAREN . NONLOGICAL error RPAREN

    START           shift and go to state 19
    IMPORT          shift and go to state 20
    CLCOMMENT       shift and go to state 21
    CLMODULE        shift and go to state 22
    NOT             shift and go to state 24
    FORALL          shift and go to state 25
    EXISTS          shift and go to state 26
    AND             shift and go to state 27
    OR              shift and go to state 28
    IF              shift and go to state 29
    IFF             shift and go to state 30
    NONLOGICAL      shift and go to state 23


state 5

    (4) ontology -> statement .

    $end            reduce using rule 4 (ontology -> statement .)


state 6

    (7) statement -> axiom . statement
    (11) statement -> axiom .
    (7) statement -> . axiom statement
    (8) statement -> . import statement
    (9) statement -> . comment statement
    (10) statement -> . module statement
    (11) statement -> . axiom
    (12) statement -> . import
    (13) statement -> . comment
    (14) statement -> . module
    (22) axiom -> . negation
    (23) axiom -> . universal
    (24) axiom -> . existential
    (25) axiom -> . conjunction
    (26) axiom -> . disjunction
    (27) axiom -> . implication
    (28) axiom -> . biconditional
    (29) axiom -> . predicate
    (20) import -> . LPAREN IMPORT URI RPAREN
    (21) import -> . LPAREN IMPORT error
    (15) comment -> . LPAREN CLCOMMENT QUOTED_STRING RPAREN
    (16) comment -> . LPAREN CLCOMMENT error RPAREN
    (17) module -> . LPAREN CLMODULE NONLOGICAL LPAREN IMPORT URI RPAREN RPAREN
    (18) module -> . LPAREN CLMODULE error
    (19) module -> . LPAREN CLMODULE LPAREN IMPORT URI RPAREN RPAREN
    (30) negation -> . LPAREN NOT axiom RPAREN
    (46) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN axiom RPAREN
    (47) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN error axiom RPAREN
    (48) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN error RPAREN
    (49) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN axiom error RPAREN
    (50) universal -> . LPAREN FORALL error LPAREN nonlogicals RPAREN error axiom RPAREN
    (43) existential -> . LPAREN EXISTS LPAREN nonlogicals RPAREN axiom RPAREN
    (44) existential -> . LPAREN EXISTS LPAREN error
    (45) existential -> . LPAREN EXISTS LPAREN nonlogicals RPAREN error
    (31) conjunction -> . LPAREN AND axiom_list RPAREN
    (32) conjunction -> . LPAREN AND error
    (33) disjunction -> . LPAREN OR axiom_list RPAREN
    (34) disjunction -> . LPAREN OR error
    (37) implication -> . LPAREN IF axiom axiom RPAREN
    (38) implication -> . LPAREN IF error
    (39) implication -> . LPAREN IF axiom error
    (40) biconditional -> . LPAREN IFF axiom axiom RPAREN
    (41) biconditional -> . LPAREN IFF error
    (42) biconditional -> . LPAREN IFF axiom error
    (51) predicate -> . LPAREN NONLOGICAL parameter RPAREN
    (52) predicate -> . LPAREN NONLOGICAL error RPAREN

    $end            reduce using rule 11 (statement -> axiom .)
    RPAREN          reduce using rule 11 (statement -> axiom .)
    LPAREN          shift and go to state 32

    axiom                          shift and go to state 6
    statement                      shift and go to state 31
    import                         shift and go to state 7
    comment                        shift and go to state 8
    module                         shift and go to state 9
    negation                       shift and go to state 10
    universal                      shift and go to state 11
    existential                    shift and go to state 12
    conjunction                    shift and go to state 13
    disjunction                    shift and go to state 14
    implication                    shift and go to state 15
    biconditional                  shift and go to state 16
    predicate                      shift and go to state 17

state 7

    (8) statement -> import . statement
    (12) statement -> import .
    (7) statement -> . axiom statement
    (8) statement -> . import statement
    (9) statement -> . comment statement
    (10) statement -> . module statement
    (11) statement -> . axiom
    (12) statement -> . import
    (13) statement -> . comment
    (14) statement -> . module
    (22) axiom -> . negation
    (23) axiom -> . universal
    (24) axiom -> . existential
    (25) axiom -> . conjunction
    (26) axiom -> . disjunction
    (27) axiom -> . implication
    (28) axiom -> . biconditional
    (29) axiom -> . predicate
    (20) import -> . LPAREN IMPORT URI RPAREN
    (21) import -> . LPAREN IMPORT error
    (15) comment -> . LPAREN CLCOMMENT QUOTED_STRING RPAREN
    (16) comment -> . LPAREN CLCOMMENT error RPAREN
    (17) module -> . LPAREN CLMODULE NONLOGICAL LPAREN IMPORT URI RPAREN RPAREN
    (18) module -> . LPAREN CLMODULE error
    (19) module -> . LPAREN CLMODULE LPAREN IMPORT URI RPAREN RPAREN
    (30) negation -> . LPAREN NOT axiom RPAREN
    (46) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN axiom RPAREN
    (47) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN error axiom RPAREN
    (48) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN error RPAREN
    (49) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN axiom error RPAREN
    (50) universal -> . LPAREN FORALL error LPAREN nonlogicals RPAREN error axiom RPAREN
    (43) existential -> . LPAREN EXISTS LPAREN nonlogicals RPAREN axiom RPAREN
    (44) existential -> . LPAREN EXISTS LPAREN error
    (45) existential -> . LPAREN EXISTS LPAREN nonlogicals RPAREN error
    (31) conjunction -> . LPAREN AND axiom_list RPAREN
    (32) conjunction -> . LPAREN AND error
    (33) disjunction -> . LPAREN OR axiom_list RPAREN
    (34) disjunction -> . LPAREN OR error
    (37) implication -> . LPAREN IF axiom axiom RPAREN
    (38) implication -> . LPAREN IF error
    (39) implication -> . LPAREN IF axiom error
    (40) biconditional -> . LPAREN IFF axiom axiom RPAREN
    (41) biconditional -> . LPAREN IFF error
    (42) biconditional -> . LPAREN IFF axiom error
    (51) predicate -> . LPAREN NONLOGICAL parameter RPAREN
    (52) predicate -> . LPAREN NONLOGICAL error RPAREN

    $end            reduce using rule 12 (statement -> import .)
    RPAREN          reduce using rule 12 (statement -> import .)
    LPAREN          shift and go to state 32

    import                         shift and go to state 7
    statement                      shift and go to state 33
    axiom                          shift and go to state 6
    comment                        shift and go to state 8
    module                         shift and go to state 9
    negation                       shift and go to state 10
    universal                      shift and go to state 11
    existential                    shift and go to state 12
    conjunction                    shift and go to state 13
    disjunction                    shift and go to state 14
    implication                    shift and go to state 15
    biconditional                  shift and go to state 16
    predicate                      shift and go to state 17

state 8

    (9) statement -> comment . statement
    (13) statement -> comment .
    (7) statement -> . axiom statement
    (8) statement -> . import statement
    (9) statement -> . comment statement
    (10) statement -> . module statement
    (11) statement -> . axiom
    (12) statement -> . import
    (13) statement -> . comment
    (14) statement -> . module
    (22) axiom -> . negation
    (23) axiom -> . universal
    (24) axiom -> . existential
    (25) axiom -> . conjunction
    (26) axiom -> . disjunction
    (27) axiom -> . implication
    (28) axiom -> . biconditional
    (29) axiom -> . predicate
    (20) import -> . LPAREN IMPORT URI RPAREN
    (21) import -> . LPAREN IMPORT error
    (15) comment -> . LPAREN CLCOMMENT QUOTED_STRING RPAREN
    (16) comment -> . LPAREN CLCOMMENT error RPAREN
    (17) module -> . LPAREN CLMODULE NONLOGICAL LPAREN IMPORT URI RPAREN RPAREN
    (18) module -> . LPAREN CLMODULE error
    (19) module -> . LPAREN CLMODULE LPAREN IMPORT URI RPAREN RPAREN
    (30) negation -> . LPAREN NOT axiom RPAREN
    (46) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN axiom RPAREN
    (47) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN error axiom RPAREN
    (48) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN error RPAREN
    (49) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN axiom error RPAREN
    (50) universal -> . LPAREN FORALL error LPAREN nonlogicals RPAREN error axiom RPAREN
    (43) existential -> . LPAREN EXISTS LPAREN nonlogicals RPAREN axiom RPAREN
    (44) existential -> . LPAREN EXISTS LPAREN error
    (45) existential -> . LPAREN EXISTS LPAREN nonlogicals RPAREN error
    (31) conjunction -> . LPAREN AND axiom_list RPAREN
    (32) conjunction -> . LPAREN AND error
    (33) disjunction -> . LPAREN OR axiom_list RPAREN
    (34) disjunction -> . LPAREN OR error
    (37) implication -> . LPAREN IF axiom axiom RPAREN
    (38) implication -> . LPAREN IF error
    (39) implication -> . LPAREN IF axiom error
    (40) biconditional -> . LPAREN IFF axiom axiom RPAREN
    (41) biconditional -> . LPAREN IFF error
    (42) biconditional -> . LPAREN IFF axiom error
    (51) predicate -> . LPAREN NONLOGICAL parameter RPAREN
    (52) predicate -> . LPAREN NONLOGICAL error RPAREN

    $end            reduce using rule 13 (statement -> comment .)
    RPAREN          reduce using rule 13 (statement -> comment .)
    LPAREN          shift and go to state 32

    comment                        shift and go to state 8
    statement                      shift and go to state 34
    axiom                          shift and go to state 6
    import                         shift and go to state 7
    module                         shift and go to state 9
    negation                       shift and go to state 10
    universal                      shift and go to state 11
    existential                    shift and go to state 12
    conjunction                    shift and go to state 13
    disjunction                    shift and go to state 14
    implication                    shift and go to state 15
    biconditional                  shift and go to state 16
    predicate                      shift and go to state 17

state 9

    (10) statement -> module . statement
    (14) statement -> module .
    (7) statement -> . axiom statement
    (8) statement -> . import statement
    (9) statement -> . comment statement
    (10) statement -> . module statement
    (11) statement -> . axiom
    (12) statement -> . import
    (13) statement -> . comment
    (14) statement -> . module
    (22) axiom -> . negation
    (23) axiom -> . universal
    (24) axiom -> . existential
    (25) axiom -> . conjunction
    (26) axiom -> . disjunction
    (27) axiom -> . implication
    (28) axiom -> . biconditional
    (29) axiom -> . predicate
    (20) import -> . LPAREN IMPORT URI RPAREN
    (21) import -> . LPAREN IMPORT error
    (15) comment -> . LPAREN CLCOMMENT QUOTED_STRING RPAREN
    (16) comment -> . LPAREN CLCOMMENT error RPAREN
    (17) module -> . LPAREN CLMODULE NONLOGICAL LPAREN IMPORT URI RPAREN RPAREN
    (18) module -> . LPAREN CLMODULE error
    (19) module -> . LPAREN CLMODULE LPAREN IMPORT URI RPAREN RPAREN
    (30) negation -> . LPAREN NOT axiom RPAREN
    (46) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN axiom RPAREN
    (47) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN error axiom RPAREN
    (48) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN error RPAREN
    (49) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN axiom error RPAREN
    (50) universal -> . LPAREN FORALL error LPAREN nonlogicals RPAREN error axiom RPAREN
    (43) existential -> . LPAREN EXISTS LPAREN nonlogicals RPAREN axiom RPAREN
    (44) existential -> . LPAREN EXISTS LPAREN error
    (45) existential -> . LPAREN EXISTS LPAREN nonlogicals RPAREN error
    (31) conjunction -> . LPAREN AND axiom_list RPAREN
    (32) conjunction -> . LPAREN AND error
    (33) disjunction -> . LPAREN OR axiom_list RPAREN
    (34) disjunction -> . LPAREN OR error
    (37) implication -> . LPAREN IF axiom axiom RPAREN
    (38) implication -> . LPAREN IF error
    (39) implication -> . LPAREN IF axiom error
    (40) biconditional -> . LPAREN IFF axiom axiom RPAREN
    (41) biconditional -> . LPAREN IFF error
    (42) biconditional -> . LPAREN IFF axiom error
    (51) predicate -> . LPAREN NONLOGICAL parameter RPAREN
    (52) predicate -> . LPAREN NONLOGICAL error RPAREN

    $end            reduce using rule 14 (statement -> module .)
    RPAREN          reduce using rule 14 (statement -> module .)
    LPAREN          shift and go to state 32

    module                         shift and go to state 9
    statement                      shift and go to state 35
    axiom                          shift and go to state 6
    import                         shift and go to state 7
    comment                        shift and go to state 8
    negation                       shift and go to state 10
    universal                      shift and go to state 11
    existential                    shift and go to state 12
    conjunction                    shift and go to state 13
    disjunction                    shift and go to state 14
    implication                    shift and go to state 15
    biconditional                  shift and go to state 16
    predicate                      shift and go to state 17

state 10

    (22) axiom -> negation .

    LPAREN          reduce using rule 22 (axiom -> negation .)
    $end            reduce using rule 22 (axiom -> negation .)
    RPAREN          reduce using rule 22 (axiom -> negation .)
    error           reduce using rule 22 (axiom -> negation .)


state 11

    (23) axiom -> universal .

    LPAREN          reduce using rule 23 (axiom -> universal .)
    $end            reduce using rule 23 (axiom -> universal .)
    RPAREN          reduce using rule 23 (axiom -> universal .)
    error           reduce using rule 23 (axiom -> universal .)


state 12

    (24) axiom -> existential .

    LPAREN          reduce using rule 24 (axiom -> existential .)
    $end            reduce using rule 24 (axiom -> existential .)
    RPAREN          reduce using rule 24 (axiom -> existential .)
    error           reduce using rule 24 (axiom -> existential .)


state 13

    (25) axiom -> conjunction .

    LPAREN          reduce using rule 25 (axiom -> conjunction .)
    $end            reduce using rule 25 (axiom -> conjunction .)
    RPAREN          reduce using rule 25 (axiom -> conjunction .)
    error           reduce using rule 25 (axiom -> conjunction .)


state 14

    (26) axiom -> disjunction .

    LPAREN          reduce using rule 26 (axiom -> disjunction .)
    $end            reduce using rule 26 (axiom -> disjunction .)
    RPAREN          reduce using rule 26 (axiom -> disjunction .)
    error           reduce using rule 26 (axiom -> disjunction .)


state 15

    (27) axiom -> implication .

    LPAREN          reduce using rule 27 (axiom -> implication .)
    $end            reduce using rule 27 (axiom -> implication .)
    RPAREN          reduce using rule 27 (axiom -> implication .)
    error           reduce using rule 27 (axiom -> implication .)


state 16

    (28) axiom -> biconditional .

    LPAREN          reduce using rule 28 (axiom -> biconditional .)
    $end            reduce using rule 28 (axiom -> biconditional .)
    RPAREN          reduce using rule 28 (axiom -> biconditional .)
    error           reduce using rule 28 (axiom -> biconditional .)


state 17

    (29) axiom -> predicate .

    LPAREN          reduce using rule 29 (axiom -> predicate .)
    $end            reduce using rule 29 (axiom -> predicate .)
    RPAREN          reduce using rule 29 (axiom -> predicate .)
    error           reduce using rule 29 (axiom -> predicate .)


state 18

    (1) starter -> COMMENT ontology .

    $end            reduce using rule 1 (starter -> COMMENT ontology .)


state 19

    (3) ontology -> LPAREN START . URI statement RPAREN
    (5) ontology -> LPAREN START . error
    (6) ontology -> LPAREN START . URI error

    URI             shift and go to state 36
    error           shift and go to state 37


state 20

    (20) import -> LPAREN IMPORT . URI RPAREN
    (21) import -> LPAREN IMPORT . error

    URI             shift and go to state 38
    error           shift and go to state 39


state 21

    (15) comment -> LPAREN CLCOMMENT . QUOTED_STRING RPAREN
    (16) comment -> LPAREN CLCOMMENT . error RPAREN

    QUOTED_STRING   shift and go to state 40
    error           shift and go to state 41


state 22

    (17) module -> LPAREN CLMODULE . NONLOGICAL LPAREN IMPORT URI RPAREN RPAREN
    (18) module -> LPAREN CLMODULE . error
    (19) module -> LPAREN CLMODULE . LPAREN IMPORT URI RPAREN RPAREN

    NONLOGICAL      shift and go to state 43
    error           shift and go to state 44
    LPAREN          shift and go to state 42


state 23

    (51) predicate -> LPAREN NONLOGICAL . parameter RPAREN
    (52) predicate -> LPAREN NONLOGICAL . error RPAREN
    (53) parameter -> . function parameter
    (54) parameter -> . nonlogicals parameter
    (55) parameter -> . function
    (56) parameter -> . nonlogicals
    (57) function -> . LPAREN NONLOGICAL parameter RPAREN
    (58) function -> . LPAREN NONLOGICAL error RPAREN
    (59) nonlogicals -> . NONLOGICAL nonlogicals
    (60) nonlogicals -> . NONLOGICAL

    error           shift and go to state 48
    LPAREN          shift and go to state 45
    NONLOGICAL      shift and go to state 46

    parameter                      shift and go to state 47
    function                       shift and go to state 49
    nonlogicals                    shift and go to state 50

state 24

    (30) negation -> LPAREN NOT . axiom RPAREN
    (22) axiom -> . negation
    (23) axiom -> . universal
    (24) axiom -> . existential
    (25) axiom -> . conjunction
    (26) axiom -> . disjunction
    (27) axiom -> . implication
    (28) axiom -> . biconditional
    (29) axiom -> . predicate
    (30) negation -> . LPAREN NOT axiom RPAREN
    (46) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN axiom RPAREN
    (47) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN error axiom RPAREN
    (48) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN error RPAREN
    (49) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN axiom error RPAREN
    (50) universal -> . LPAREN FORALL error LPAREN nonlogicals RPAREN error axiom RPAREN
    (43) existential -> . LPAREN EXISTS LPAREN nonlogicals RPAREN axiom RPAREN
    (44) existential -> . LPAREN EXISTS LPAREN error
    (45) existential -> . LPAREN EXISTS LPAREN nonlogicals RPAREN error
    (31) conjunction -> . LPAREN AND axiom_list RPAREN
    (32) conjunction -> . LPAREN AND error
    (33) disjunction -> . LPAREN OR axiom_list RPAREN
    (34) disjunction -> . LPAREN OR error
    (37) implication -> . LPAREN IF axiom axiom RPAREN
    (38) implication -> . LPAREN IF error
    (39) implication -> . LPAREN IF axiom error
    (40) biconditional -> . LPAREN IFF axiom axiom RPAREN
    (41) biconditional -> . LPAREN IFF error
    (42) biconditional -> . LPAREN IFF axiom error
    (51) predicate -> . LPAREN NONLOGICAL parameter RPAREN
    (52) predicate -> . LPAREN NONLOGICAL error RPAREN

    LPAREN          shift and go to state 51

    axiom                          shift and go to state 52
    negation                       shift and go to state 10
    universal                      shift and go to state 11
    existential                    shift and go to state 12
    conjunction                    shift and go to state 13
    disjunction                    shift and go to state 14
    implication                    shift and go to state 15
    biconditional                  shift and go to state 16
    predicate                      shift and go to state 17

state 25
